testdata/baselines/reference/submodule/conformance/moduleExportDuplicateAlias3.errors.txt
test.js(1,19): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== test.js (1 errors) ====
    const { apply } = require('./moduleExportAliasDuplicateAlias')
                      ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    const result = apply.toFixed()
    
==== moduleExportAliasDuplicateAlias.js (0 errors) ====
    exports.apply = undefined;
    exports.apply = undefined;
    function a() { }
    exports.apply = a;
    exports.apply()
    exports.apply = 'ok'
    var OK = exports.apply.toUpperCase()
    exports.apply = 1
    